--- a/src/containers/MoviePage/DetailsMovieCard/DetailsMovieCard.module.css
+++ b/src/containers/MoviePage/DetailsMovieCard/DetailsMovieCard.module.css
@@ -1,8 +1,9 @@
 .DetailsMovieCard {
-  margin-top: 50px;
+  background-color: yellowgreen;
+  width: 100%;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  width: 80%;
   box-shadow: 7px 10px 11px -4px rgba(0, 0, 0, 0.75);
 }
 
@@ -15,20 +16,12 @@
   min-height: 500px;
 }
 
-.DetailsTitle {
-  margin: 0 20px 0 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .DetailsMovieInfo {
+  margin-left: 20px;
   width: 50%;
-  margin: 0 50px 0 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-self: center;
 }
 
 .Average {
