--- a/src/containers/MoviePage/MoviePage.module.css
+++ b/src/containers/MoviePage/MoviePage.module.css
@@ -1,7 +1,7 @@
 .MoviePage {
   height: 100vh;
-  background-color: #232323;
+  background-color: #c7c7c7;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
