--- a/src/containers/SearchPage/SearchBox/SearchBox.module.css
+++ b/src/containers/SearchPage/SearchBox/SearchBox.module.css
@@ -1,9 +1,9 @@
 .Search {
   width: 300px;
-  border: 2px solid #00B4CC;
+  border: 2px solid #00b4cc;
   padding: 5px;
   height: 30px;
   border-radius: 5px;
   outline: none;
-  color: #9DBFAF;
+  color: #9dbfaf;
 }
