--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
-body {
+html,body {
   margin: 0;
+  min-height: 100%;
+}
+
+body {
   font-family: "roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
