--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@ body {
   font-family: "roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: whitesmoke;
+  background-color: #c7c7c7;
 }
