--- a/src/components/NavBar/Menu/Menu.module.css
+++ b/src/components/NavBar/Menu/Menu.module.css
@@ -1,4 +1,5 @@
 .Menu {
+  display: flex;
   list-style: none;
 }
 
@@ -17,16 +18,8 @@
   color: blue;
 }
 
-.Button {
-  color: white;
-  border: none;
-  background-color: inherit;
-  font-size: inherit;
-  outline: none;
-  cursor: pointer;
-  display: inline-block;
-}
-
-.Button:hover {
-  color: blue;
+@media (max-width: 700px) {
+  .MenuItemHidden{
+    display: none;
+  }
 }
