--- a/src/containers/HomePage/MovieList/MovieCard/MovieCard.module.css
+++ b/src/containers/HomePage/MovieList/MovieCard/MovieCard.module.css
@@ -5,8 +5,8 @@
   box-shadow: 7px 10px 11px -4px rgba(0, 0, 0, 0.75);
   margin-bottom: 20px;
   text-decoration: none;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: #37474f;
 }
 
 .MovieCard:hover {
@@ -20,8 +20,7 @@
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
   height: 100%;
   max-height: 480px;
-  max-width: 60vw;
-  min-width: 20rem;
+  max-width: 320px;
 }
 
 .MovieCardTitle {
